# py-eodms-rapi

./: .gitignore  .readthedocs.yml  LICENSE  README.md  _deploy_pypi.bat  compare_w_git.WinMerge  compare_w_py37.WinMerge  compare_w_qgis.WinMerge  download.md  examples.md  index.md  mkdocs.yml  open_env.ps1  requirements.txt  setup.cfg  setup.py
.github/workflows/: check_version.yml  test_pyeodmsrapi.yml
api/: index.md
css/: extra.css
docs/: 404.html  about.rst  conf.py  download.rst  eodms_rapi.rst  examples.rst  index.html  index.md  index.rst  initialization.rst  installation.rst  order.md  order.rst  search-rapi.md  search-rapi.rst  search.html  sitemap.xml
docs/api/: index.html  modules.rst
docs/api/source/: eodms_rapi.md  modules.md
docs/api/source/eodms_rapi/: index.html
docs/api/source/modules/: index.html
docs/download/: index.html
docs/examples/: index.html
docs/order/: index.html
docs/search/: search_index.json
docs/search-rapi/: index.html
eodms_rapi/: __init__.py  eodms.py  eodms.py.bak  geo.py  query_error.py  rapi_requests.py
test/: test_pyeodmsrapi.bat  test_pyeodmsrapi.py
