[metadata]
name = py-eodms-rapi
version = 1.0.0
author = Kevin Ballantyne (Natural Resources Canada)
author_email = kevin.ballantyne@canada.ca
description = EODMS RAPI Client is a Python3 package used to access the REST API service provided by the Earth Observation Data Management System (EODMS) from Natural Resources Canada.
description-file = README.md
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nrcan-eodms-sgdot-rncan/py-eodms-rapi
project_urls =
    Bug Tracker = https://github.com/nrcan-eodms-sgdot-rncan/py-eodms-rapi/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
